# weather-api

./: .env.template  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
src/weather_api/: config.py
src/weather_api/application/: interfaces.py
src/weather_api/application/use_cases/: fetch_weather_use_case.py  get_stats_use_case.py  get_weather_list_use_case.py  is_weather_data_exists_use_case.py
src/weather_api/domain/: dto.py  enum.py  exceptions.py  types.py  utils.py
src/weather_api/domain/entities/: weather.py
src/weather_api/infrastructure/: exception_handlers.py
src/weather_api/infrastructure/alembic/: env.py
src/weather_api/infrastructure/alembic/versions/: e143bec49a9e_added_weather_table.py
src/weather_api/infrastructure/arq/: worker.py
src/weather_api/infrastructure/clients/: open_weather_client.py  response_validators.py
src/weather_api/infrastructure/database/: session_factory.py
src/weather_api/infrastructure/database/gateway/: base.py  reader.py  writer.py
src/weather_api/infrastructure/database/tables/: __init__.py  base_table.py  weather.py
src/weather_api/infrastructure/logging/: log_config.json  setup_logging.py
src/weather_api/main/: ioc.py  web.py
src/weather_api/presentation/: cron.py  types.py
src/weather_api/presentation/http/: output_models.py  router.py
